# AGENTE-IASS-VIKING-BURGER

./: .replit  0 prompt inicial (copy).txt  0 prompt inicial.txt  1 ASISTENTE_PDC.txt  1 ASISTENTE_PDC_PROMO.txt  1 Asistente Cliente Nuevo.txt  2. Asistente Cliente Existente.txt  3. Asistente Despues del pago.txt  ASISTENTE_0_INICIAL_PROMO.txt  ASISTENTE_FORMA_PAGO.txt  ASISTENTE_LV_DOMICILIO.txt  ASISTENTE_LV_DOMICILIO_PROMO.txt  ASISTENTE_LV_RECOGER.txt  ASISTENTE_LV_RECOGER_PROMO.txt  ASISTENTE_PDC_DOMICILIO.txt  ASISTENTE_PDC_DOMICILIO_PROMO.txt  ASISTENTE_PDC_RECOGER.txt  ASISTENTE_PDC_RECOGER_PROMO.txt  ASISTENTE_POSTVENTA_DOMICILIO.txt  ASISTENTE_POSTVENTA_RECOGER.txt  Asistente La Virginia.txt  Asistente La Virginia_PROMO.txt  DOCUMENTACION_CAMBIOS_ANTHROPIC.md  Dockerfile  FIX_FUNCTION_RESPONSE_COMPARACION_APIS.md  FIX_GEMINI_FUNCTION_RESPONSE.md  FIX_PROMPT_BLOQUEO_HERRAMIENTA.md  GUIA_MIGRACION_OPENAI_GPT5.md  GUIA_SEQ_LOGGING.md  default_tools.json  flujo_n8n.json  gemini (Funciones FG).json  gemini.json  generate_response_anthropic.py  geocodificacion.py  main  28 ene 2025.py  main  ORIGINAL 01 DIC 6:00PM.py  main (copy) 1.py  main (copy).py  main 20 enero sin DeepSeek.py  (+36 more)
PROMPTS/URBAN/: ASISTENTE_DOMICILIO Modifs.txt  ASISTENTE_DOMICILIO.txt  ASISTENTE_FORMA_PAGO.txt  ASISTENTE_INICIAL Modifs.txt  ASISTENTE_INICIAL.txt  ASISTENTE_INICIAL_FUERA_DE_HORARIO modifs.txt  ASISTENTE_INICIAL_FUERA_DE_HORARIO.txt  ASISTENTE_INICIAL_FUERA_DE_HORARIO_PYD.txt  ASISTENTE_INICIAL_PYD.txt  ASISTENTE_POSTVENTA.txt  ASISTENTE_RECOGER DEPRECATED.txt  (+1 more)
